# T-Code-IME-for-Win

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.txt  build_log.txt  diagram.puml  nuget.config  temp_debug.ps1  temp_run_installer.ps1  vcpkg.json
installer/: README.md  TCodeIMEInstaller.iss  build_all.ps1  build_installer.ps1
packaging/: Package.appxmanifest  Package.appxmanifest.in  build_package.ps1  export_cert.ps1  reg-0.2.0.0.reg  update_manifest.ps1
packaging/layout/: AppxManifest.xml  Package.appxmanifest
packaging/layout/proxy/: TCodeProxy.deps.json
packaging/output/: TCodeIME_cert.cer
proxy/: build_nuget.ps1
proxy/TCodeProxy/: Program.cs  TCodeProxy.csproj  TCodeProxy.nuspec  proxy.cpp  resource.rc
proxy/TCodeProxy/Protos/: tcode_engine.proto
proxy/nupkg/: TCodeProxy.1.0.0.nupkg
scripts/: extract_icon.ps1  find_tcodeime_lock.ps1  find_unused_vcpkg.ps1  find_unused_vcpkg_out.txt  generate_windows_icons.ps1  kill_engine.ps1
src/: CTBrandButton.cpp  CTBrandButton.h  CTCodeBrandingButton.cpp  CTCodeBrandingButton.h  CTCodeCandidateListUI.cpp  CTCodeCandidateListUI.h  CTCodeModeButton.cpp  CTCodeModeButton.h  ClassFactory.cpp  ClassFactory.h  Compartment.cpp  CompartmentEventSink.cpp  EditSession.cpp  EditSession.h  EngineClient.cpp  EngineClient.h  GlazeClient.hpp  GlazeModels.hpp  Globals.cpp  Globals.h  IPCClient.cpp  IPCClient.h  PipeServer.cpp  PipeServer.h  ProcessManager.cpp  ProcessManager.h  ProxyMain.cpp  Registry.cpp  Registry.h  Resources.rc  TCodeIME.cpp  TCodeIME.def  TCodeIME.h  TCodeIME.rc  dllmain.cpp  helper.cpp  helper.h  resource.h
winget/manifests/n/NicheAppLab/T-CodeIME-JRE/0.2.1.0/: NicheAppLab.T-CodeIME-JRE.yaml.in
winget/manifests/n/NicheAppLab/T-CodeIME-JRE/0.3.0.0/: NicheAppLab.T-CodeIME-JRE.installer.yaml.in  NicheAppLab.T-CodeIME-JRE.locale.ja-JP.yaml.in
winget/manifests/n/NicheAppLab/T-CodeIME/0.1.1.0/: NicheAppLab.T-CodeIME.locale.ja-JP.yaml.in
winget/manifests/n/NicheAppLab/T-CodeIME/0.2.1.0/: NicheAppLab.T-CodeIME.yaml.in
winget/manifests/n/NicheAppLab/T-CodeIME/0.3.0.0/: NicheAppLab.T-CodeIME.installer.yaml.in  NicheAppLab.T-CodeIME.locale.ja-JP.yaml.in
